完成登陆注册，查看个人主页，查看全部课程，查看个人课程，学习课程小节，做题，学生将课程添加至自己的课程的前端代码